third_party/WebKit/Source/core/dom/shadow/ElementShadow.cpp
@@ -29,6 +29,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "core/css/StyleSheetList.h"
 #include "core/css/resolver/ScopedStyleResolver.h"
+#include "core/dom/NodeTraversal.h"
 #include "core/dom/StyleChangeReason.h"
 #include "core/dom/shadow/ElementShadowV0.h"
 #include "core/frame/Deprecation.h"
@@ -80,7 +81,12 @@ ShadowRoot& ElementShadow::AddShadowRoot(Element& shadow_host,
   shadow_root->SetParentOrShadowHostNode(&shadow_host);
   shadow_root->SetParentTreeScope(shadow_host.GetTreeScope());
   AppendShadowRoot(*shadow_root);
-  SetNeedsDistributionRecalc();
+  if (type == ShadowRootType::V0) {
+    SetNeedsDistributionRecalc();
+  } else {
+    for (Node& child : NodeTraversal::ChildrenOf(shadow_host))
+      child.LazyReattachIfAttached();
+  }
 
   shadow_root->InsertedInto(&shadow_host);
   shadow_host.SetChildNeedsStyleRecalc();
